--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,4 +1,9 @@
 %h1 Hello
+.row
+  .col-md-12
+    #user_field
+  .col-md-12
+    #message_field
 
 %form
   =text_field_tag "message","", id: "my_message", class:   "my_message_class"
